# DeepLearningStudy

./: .gitignore  README.md
Eg01_NeuralNetworks/: Classifer.py  NeuralNetworks.py  classifer.py
Eg01_neural_network/: mnist_loader.py  network.py  test_mnist.py
MC01_Basic/: Sampling.py
MeachineLearning/ML01_KNN/: knn.py  testKnn.py
PytorchCppIntegration/: CMakeLists.txt  README.md
PytorchCppIntegration/Eg01_Basic/: CMakeLists.txt  main.cpp
PytorchCppIntegration/Eg02_Yolo/: CMakeLists.txt  Darknet.cpp  Darknet.h  main.cpp
common/: debug_info.py  heading.py
data/: digits.7z
data/dating/: info.md
meachine_learning/MC01_Basic/: sampling.py
meachine_learning/ml01_knn/: knn.py
meachine_learning/ml02_decision_trees/: decision_trees.py
pytorch_study/pt01_basic/: basic_usage.py  data_loading.py  neural_networks.py  saving_loading_models.py  torch_study_temp.py  trace_model.py  training_classifier.py  transfer_learning.py
pytorch_study/pt02_simple/: batch_train.py  build_nn_quickly.py  classification.py  cnn.py  net.pkl  net_param.pkl  optimizer.py  regression.py  save_reload.py
pytorch_study/pt03_image/: finetuning_torchvision_models.py  spatial_transformer.py
tools/: draw_chinese_text.py
